# medviz

./: README.md  README1.md  UI设计文档.txt  index.html  package-lock.json  package.json  render.yaml  vite.config.ts  统计图形1.docx
.claude/: launch.json  settings.local.json
.github/workflows/: release.yml
backend/: DEPLOY.md  README.md  app.py  auth_store.py  demo.py  nomogram_fit.py  requirements-cloud.txt  requirements.txt  server_entry.py
backend/sample_data/: cox_nomogram.json  cox_sample.csv  logistic_nomogram.json  logistic_sample.csv
src/: App.tsx  clinical.ts  index.css  main.tsx  nav.ts  updater.ts  workspace.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/auth/: acl.ts  authStore.ts  cloudClient.ts  cloudStore.ts  crypto.ts  idb.ts  projects.ts
src/charts/: excelToolbox.ts
src/charts/Heatmap/: Heatmap.tsx  buildOption.ts  cluster.ts  samples.ts  types.ts
src/charts/Nomogram/: EvalCharts.tsx  NomogramChart.tsx  calc.ts  samples.ts  types.ts
src/charts/RadarChart/: types.ts  (+3 more)
src/components/: ClinicalCard.tsx  PatientBar.tsx
src/data/: fitClient.ts  importExcel.ts  templates.ts
src/export/: exportChartExcel.ts  exportPdf.ts  patientMasterIO.ts  projectIO.ts
src/hooks/: useScenarioSample.ts
src/pages/: AccountModal.tsx  AdminPanelPage.tsx  AggregatePage.tsx  FitModal.tsx  HeatmapPage.tsx  LoginPage.tsx  NomogramPage.tsx  PatientManagementPage.tsx  ProjectsDrawer.tsx  RadarPage.tsx  TrendPage.tsx
src/store/: clinicalStore.ts  heatmapStore.ts  navStore.ts  nomogramStore.ts  patientStore.ts  radarStore.ts  trendStore.ts
(+4 files in other folders)
